plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.marcos'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

ext {
	set('springModulithVersion', "2.1.0")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.bucket4j:bucket4j_jdk17-core:8.19.0'
	implementation 'com.bucket4j:bucket4j_jdk17-caffeine:8.19.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-parameters')
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
	jvmArgs += ['--enable-preview']
}
